Add msgp generate code

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,4 @@ package: github.com/Konboi/go-fluent-logger-sample
 import:
   - package: github.com/fluent/fluent-logger-golang/fluent
   - package: github.com/mattn/go-gimei
+  - package: github.com/tinylib/msgp
